[package]
name = "thinp-garbage-collected"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-log = { version = "0.2.15", default_features = false, features = [
  "trace",
] }
anyhow = "1.0"
blake2 = "0.10"
byteorder = "1.3"
crc32c = "0.6"
diffs = "0.5"
fixedbitset = "0.4"

# This needs to be 0.14 to avoid an issue with blake2.
generic-array = "0.14"
linked-hash-map = "0.5"
rand = "0.8"
rand_chacha = "0.3"
roaring = "0.10"
thinp = { git = "https://github.com/jthornber/thin-provisioning-tools.git", branch = "main" }
thiserror = "1.0"
threadpool = "1.8"
tracing = "0.1"
tracing-subscriber = "0.3"
zstd = "0.13"
mlua = { version = "0.9.8", features = ["lua54", "vendored"] }
num_enum = "0.7.2"
rio = "0.9.4"
safemem = "0.3.3"
